# sketches

./: Cargo.toml  README.adoc
games/sk01/: Cargo.toml
games/sk01/src/: lib.rs  main.rs  model.rs  resources.rs  shader.wgsl
games/sk02/: Cargo.toml
games/sk02/src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
